applet: Fix delayModelUpdates mode

The delayModelUpdates write-only property was a workaround, but it
didn't even work properly especially with multiple delegates
(writers) per single shared variable. This patch promotes the concept
into a model role, and turns the model's shared property into readonly
aggregated state. This should fix most of the cases when a connection
would suddenly teleport away or even replaced with another while typing
in password.

BUG: 389052
(cherry picked from commit 9e5cdc3e4f0b83221310560f2e4966c7d5fa59bc)